--- a/w002/view/templets/home/index/about.html
+++ b/w002/view/templets/home/index/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>关于我们</title>
+<title>关于我们asdasd</title>
 <meta name="description" content="Free Web tutorials">
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <link href="css/base.css" rel="stylesheet" type="text/css">
