--- a/w002/view/templets/home/index/about.html
+++ b/w002/view/templets/home/index/about.html
@@ -1,6 +1,6 @@
 <!-- <!doctype html>
 <html>
-<head>
+<head>1566666615
 <meta charset="utf-8">
 <title>关于我们asdasd</title>
 <meta name="description" content="Free Web tutorials">
